// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List> Snapshots and structure should render story 'AsLink' 1`] = `
<ul
  className="lumx-list lumx-list--item-padding-big"
  tabIndex={0}
>
  <ListItem
    before={
      <Icon
        icon="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
      />
    }
    className="lumx-color-background-dark-L6"
    isHighlighted={false}
    key=".0"
    linkProps={
      Object {
        "href": "#",
      }
    }
    linkRef={[Function]}
    onFocus={[Function]}
    onItemSelected={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    size="regular"
  >
    <span>
      My first link
    </span>
  </ListItem>
  <ListItem
    after={
      <Icon
        icon="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
      />
    }
    className="lumx-color-background-dark-L6"
    isHighlighted={false}
    key=".1"
    linkProps={
      Object {
        "href": "http://www.google.com",
        "target": "_blank",
      }
    }
    linkRef={[Function]}
    onFocus={[Function]}
    onItemSelected={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    size="regular"
  >
    <span>
      Google
    </span>
  </ListItem>
</ul>
`;

exports[`<List> Snapshots and structure should render story 'KeyboardNavigation' 1`] = `
<ul
  className="lumx-list lumx-list--item-padding-big"
  tabIndex={0}
>
  <ListItem
    isHighlighted={false}
    key=".0"
    linkRef={[Function]}
    onFocus={[Function]}
    onItemSelected={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    size="regular"
  >
    Clickable item 1
  </ListItem>
  <ListDivider
    key=".1"
  />
  <ListItem
    isHighlighted={false}
    key=".2"
    linkProps={
      Object {
        "href": "#",
      }
    }
    linkRef={[Function]}
    onFocus={[Function]}
    onItemSelected={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    size="regular"
  >
    Link item 1
  </ListItem>
  <ListItem
    key=".3..0"
    size="regular"
  >
    Non clickable (=non navigable) item
  </ListItem>
  <ListSubheader
    key=".3..1"
  >
    Header
  </ListSubheader>
  <ListItem
    isHighlighted={false}
    key=".3..2"
    linkProps={
      Object {
        "href": "#",
      }
    }
    linkRef={[Function]}
    onFocus={[Function]}
    onItemSelected={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    size="regular"
  >
    Link item 2
  </ListItem>
  <ListSubheader
    key=".3..3"
  >
    Header
  </ListSubheader>
  <CustomListItem
    key=".4"
  />
  <ListItem
    isHighlighted={false}
    key=".5:$1"
    linkProps={
      Object {
        "href": "#",
      }
    }
    linkRef={[Function]}
    onFocus={[Function]}
    onItemSelected={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    size="regular"
  >
    Link item 3
  </ListItem>
</ul>
`;

exports[`<List> Snapshots and structure should render story 'WithCustomChildren' 1`] = `
<ul
  className="lumx-list"
  tabIndex={-1}
>
  <CustomListItem
    key=".0"
  />
  <CustomListItem
    key=".1"
  />
  <CustomListItem
    key=".2"
  />
</ul>
`;

exports[`<List> Snapshots and structure should render story 'WithItemPadding' 1`] = `
Array [
  <ul
    className="lumx-list lumx-list--item-padding-big"
    tabIndex={0}
  >
    <ListItem
      className="lumx-color-background-dark-L6"
      isHighlighted={false}
      key=".0"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkRef={[Function]}
      onFocus={[Function]}
      onItemSelected={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      size="big"
    >
      <div>
        Two-line item
      </div>
      <div
        className="lumx-color-font-dark-L2"
      >
        Secondary text
      </div>
    </ListItem>
    <ListItem
      className="lumx-color-background-dark-L6"
      isHighlighted={false}
      key=".1"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkRef={[Function]}
      onFocus={[Function]}
      onItemSelected={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      size="big"
    >
      <div>
        Two-line item
      </div>
      <div
        className="lumx-color-font-dark-L2"
      >
        Secondary text
      </div>
    </ListItem>
  </ul>,
  <ul
    className="lumx-list lumx-list--item-padding-big"
    tabIndex={0}
  >
    <ListItem
      className="lumx-color-background-dark-L6"
      isHighlighted={false}
      key=".0"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkRef={[Function]}
      onFocus={[Function]}
      onItemSelected={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      size="big"
    >
      <div>
        Two-line item
      </div>
      <div
        className="lumx-color-font-dark-L2"
      >
        Secondary text
      </div>
    </ListItem>
    <ListItem
      className="lumx-color-background-dark-L6"
      isHighlighted={false}
      key=".1"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkRef={[Function]}
      onFocus={[Function]}
      onItemSelected={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      size="big"
    >
      <div>
        Two-line item
      </div>
      <div
        className="lumx-color-font-dark-L2"
      >
        Secondary text
      </div>
    </ListItem>
  </ul>,
  <ul
    className="lumx-list lumx-list--item-padding-huge"
    tabIndex={0}
  >
    <ListItem
      className="lumx-color-background-dark-L6"
      isHighlighted={false}
      key=".0"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkRef={[Function]}
      onFocus={[Function]}
      onItemSelected={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      size="big"
    >
      <div>
        Two-line item
      </div>
      <div
        className="lumx-color-font-dark-L2"
      >
        Secondary text
      </div>
    </ListItem>
    <ListItem
      className="lumx-color-background-dark-L6"
      isHighlighted={false}
      key=".1"
      linkProps={
        Object {
          "href": "#",
        }
      }
      linkRef={[Function]}
      onFocus={[Function]}
      onItemSelected={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      size="big"
    >
      <div>
        Two-line item
      </div>
      <div
        className="lumx-color-font-dark-L2"
      >
        Secondary text
      </div>
    </ListItem>
  </ul>,
]
`;
